[package]
name = "yasqlplus"
authors = ["SalHe <salhe@qq.com>"]
description = "YaSQL+ is an alternative for yasql."
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
console = "0.15.7"
rustyline = { version = "13.0.0", features = ["derive"] }
syntect = "5.1.0"
tabled = { version = "0.14.0", features = ["color"] }
terminal_size = "0.3.0"
thiserror = "1.0.50"
yasqlplus-client = { path = "./yasqlplus-client" }

[profile.release]
lto = true
strip = true
opt-level = "z"

[workspace]
members = ["yasqlplus-client"]
