[package]
name = "yasqlplus"
authors = ["SalHe <salhe@qq.com>"]
description = "YaSQL+ is an alternative for yasql."
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
console = "0.15.7"
dirs = "5.0.1"
nu-ansi-term = "0.49.0"
reedline = "0.27.1"
syntect = "5.1.0"
tabled = { version = "0.15.0", features = ["ansi"] }
terminal_size = "0.3.0"
thiserror = "1.0.50"
yasqlplus-client = { path = "./yasqlplus-client" }

[dependencies.rustyline]
# version = "13.0.0"

# Use this branch temporarily for fixing multiline pasting.
# Waiting for this PR merged or another fix merged.
#   https://github.com/kkawakam/rustyline/pull/758
git = "https://github.com/SalHe/rustyline.git"
branch = "fix-paste-mulitiline"
features = ["derive"]

[profile.release]
lto = true
strip = true
opt-level = "z"

[workspace]
members = ["yasqlplus-client"]
