[package]
name = "yasqlplus"
authors = ["SalHe <salhe@qq.com>"]
description = "YaSQL+ is an alternative for yasql."
version = "0.1.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
console = "0.15.7"
dirs = "5.0.1"
syntect = "5.1.0"
tabled = { version = "0.15.0", features = ["ansi"] }
terminal_size = "0.3.0"
thiserror = "1.0.50"
yasqlplus-client = { path = "./yasqlplus-client" }
rustyline = { version = "14.0.0", features = ["derive", "buffer-redux"] }

[profile.release]
lto = true
strip = true
opt-level = "z"

[workspace]
members = ["yasqlplus-client"]
